--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,17 +16,17 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_random.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_sort_search.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_algorithm.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_tensor.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_mapping_view.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_helpers_for_testing.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tmp.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_tensor.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_init_list_helper.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_indexer.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_walker.cpp
