--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,19 +22,19 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_traverser.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_tensor.cpp
 
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_common.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_init_list_helper.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_libdivide_helper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_init_list_helper.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_slice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_descriptor.cpp
 #
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_indexer.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_walker.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_indexer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_traverser.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
 #
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
