--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,7 +22,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_tensor.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_traverser.cpp
 
-    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce_binary.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce_binary.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tmp.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator.cpp
