--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,8 +25,8 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce_binary.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tmp.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_trivial_iterator.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_trivial_iterator.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_copy.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/test_storage.cpp
