--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,10 +40,10 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_walker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_data_accessor_traverser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_iterator.cpp
-
+#
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_core.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_implementation.cpp
-
+#
     ${CMAKE_CURRENT_SOURCE_DIR}/test_view_factory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_expression_template_engine.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_operators.cpp
@@ -62,7 +62,7 @@ target_sources(Test PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/test_math_elementwise.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test_builder.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_random.cpp
