--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,7 +22,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_traverser.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce.cpp
 
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_iterator_old.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/benchmark_reduce_binary.cpp
@@ -57,11 +57,11 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_application_specific.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_indexing.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_reduce.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_reduce.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_manipulation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_math_elementwise.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search.cpp
 #
