--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -64,6 +64,8 @@ target_sources(Test PRIVATE
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_math_elementwise.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_math_along_axes.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_math_sum_prod.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_math_cumsum_cumprod.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_math_all_any.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_math_min_max.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic.cpp
