--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,10 +58,10 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_data_accessor.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_view.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_reduce_slide_transform.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_application_specific.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/test_tensor_application_specific.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_indexing.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_reduce.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_reduce.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_manipulation.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_math_elementwise.cpp
@@ -77,7 +77,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic_average_moving_average.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic_moving_mean_histogram.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_statistic_big.cpp
-
+#
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search_sort_argsort.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search_partition_argpartition.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search_argmin_argmax.cpp
@@ -85,7 +85,7 @@ target_sources(Test PRIVATE
     #${CMAKE_CURRENT_SOURCE_DIR}/test_sort_search_unique.cpp
 #
     #${CMAKE_CURRENT_SOURCE_DIR}/test_builder.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/test_random.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_random.cpp
 
     ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp
 )
